[gd_scene load_steps=31 format=2]

[ext_resource path="res://src/scenes/char/Node2D.gd" type="Script" id=1]
[ext_resource path="res://PhantomMuff Normal.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://vcr.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/scenes/char/Animations.gd" type="Script" id=4]
[ext_resource path="res://src/scenes/char/File.gd" type="Script" id=5]
[ext_resource path="res://src/scenes/char/Frames.gd" type="Script" id=6]
[ext_resource path="res://src/scenes/char/Texture.gd" type="Script" id=7]
[ext_resource path="res://src/scenes/char/Character.gd" type="Script" id=8]
[ext_resource path="res://src/scenes/char/TextureBack.gd" type="Script" id=9]
[ext_resource path="res://src/scenes/char/Camera.gd" type="Script" id=10]
[ext_resource path="res://src/scenes/char/Export.gd" type="Script" id=11]
[ext_resource path="res://src/scenes/char/UnfocusSpinbox.gd" type="Script" id=12]
[ext_resource path="res://src/scenes/char/UnfocusTextEdit.gd" type="Script" id=13]
[ext_resource path="res://icon.png" type="Texture" id=14]
[ext_resource path="res://src/scenes/char/Properties.gd" type="Script" id=15]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.5, 1 )
colors = PoolColorArray( 0.262745, 0.611765, 0.356863, 1, 0, 0.176471, 0.168627, 1, 0.854902, 0.992157, 1, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 720

[sub_resource type="DynamicFont" id=7]
size = 12
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.0588235, 0.0588235, 0.0588235, 1 )

[sub_resource type="DynamicFont" id=11]
size = 12
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 12
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=12]
size = 12
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 12
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=9]
default_font = SubResource( 8 )

[sub_resource type="DynamicFont" id=15]
size = 14
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.0588235, 0.0588235, 0.0588235, 1 )

[sub_resource type="Theme" id=14]
default_font = SubResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 12
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=13]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 32
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Char Editor" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera" type="Camera2D" parent="."]
rotating = true
current = true
script = ExtResource( 10 )

[node name="Background" type="Node2D" parent="."]

[node name="Z-Axis" type="Line2D" parent="Background"]
position = Vector2( 0.5, 0.5 )
points = PoolVector2Array( -2000, 100, 2000, -100 )
width = 1.0
default_color = Color( 0, 0, 1, 1 )

[node name="X-Axis" type="Line2D" parent="Background"]
position = Vector2( 0.5, 0.5 )
points = PoolVector2Array( -2000, 0, 2000, 0 )
width = 1.0
default_color = Color( 1, 0, 0, 1 )

[node name="Y-Axis" type="Line2D" parent="Background"]
position = Vector2( 0.5, 0 )
points = PoolVector2Array( 0, -2000, 0, 2000 )
width = 1.0
default_color = Color( 0, 1, 0, 1 )

[node name="TextureBack" type="ColorRect" parent="."]
margin_right = 132.0
margin_bottom = 188.0
color = Color( 1, 1, 0, 0.294118 )
script = ExtResource( 9 )

[node name="Texture" type="Sprite" parent="."]
centered = false
region_enabled = true
script = ExtResource( 7 )

[node name="BG" type="CanvasLayer" parent="."]
layer = -4

[node name="Sprite" type="Sprite" parent="BG"]
position = Vector2( 1280, 0 )
rotation = 1.5708
scale = Vector2( 1, 1280 )
z_index = -10
texture = SubResource( 2 )
centered = false

[node name="Hud" type="CanvasLayer" parent="."]

[node name="Background" type="Node" parent="Hud"]

[node name="ColorRect" type="ColorRect" parent="Hud/Background"]
margin_right = 1280.0
margin_bottom = 10.0
color = Color( 0.0392157, 0.0392157, 0.0392157, 1 )

[node name="ColorRect4" type="ColorRect" parent="Hud/Background"]
margin_top = 10.0
margin_right = 8.0
margin_bottom = 540.0
color = Color( 0.0392157, 0.0392157, 0.0392157, 1 )

[node name="ColorRect5" type="ColorRect" parent="Hud/Background"]
margin_left = 1270.0
margin_top = 10.0
margin_right = 1280.0
margin_bottom = 540.0
color = Color( 0.0392157, 0.0392157, 0.0392157, 1 )

[node name="ColorRect3" type="ColorRect" parent="Hud/Background"]
margin_top = 540.0
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.0392157, 0.0392157, 0.0392157, 1 )

[node name="File" type="Node" parent="Hud"]
script = ExtResource( 5 )

[node name="File" type="Label" parent="Hud/File"]
margin_left = 8.0
margin_top = 542.0
margin_right = 265.0
margin_bottom = 556.0
custom_fonts/font = SubResource( 7 )
custom_styles/normal = SubResource( 10 )
text = "File"
align = 1
valign = 1

[node name="New" type="Button" parent="Hud/File"]
margin_left = 8.0
margin_top = 560.0
margin_right = 96.0
margin_bottom = 578.0
custom_fonts/font = SubResource( 11 )
text = "Create New"

[node name="Load" type="Button" parent="Hud/File"]
margin_left = 100.0
margin_top = 560.0
margin_right = 179.0
margin_bottom = 578.0
custom_fonts/font = SubResource( 11 )
text = "Load Data"

[node name="Save" type="Button" parent="Hud/File"]
margin_left = 183.0
margin_top = 560.0
margin_right = 263.0
margin_bottom = 578.0
custom_fonts/font = SubResource( 11 )
disabled = true
text = "Save Data"

[node name="Export" type="Button" parent="Hud/File"]
margin_left = 8.0
margin_top = 581.0
margin_right = 97.0
margin_bottom = 599.0
custom_fonts/font = SubResource( 11 )
disabled = true
text = "Export Char"
script = ExtResource( 11 )

[node name="Character" type="Node" parent="Hud"]
script = ExtResource( 8 )

[node name="Properties" type="Button" parent="Hud/Character"]
margin_left = 8.0
margin_top = 606.0
margin_right = 92.0
margin_bottom = 624.0
custom_fonts/font = SubResource( 11 )
text = "Properties"

[node name="Animations" type="Node" parent="Hud"]
script = ExtResource( 4 )

[node name="Animations" type="Label" parent="Hud/Animations"]
margin_left = 267.0
margin_top = 542.0
margin_right = 552.0
margin_bottom = 556.0
custom_fonts/font = SubResource( 7 )
custom_styles/normal = SubResource( 10 )
text = "Animations"
align = 1
valign = 1

[node name="Animation" type="Node" parent="Hud/Animations"]

[node name="Animation" type="Label" parent="Hud/Animations/Animation"]
margin_left = 267.0
margin_top = 558.0
margin_right = 411.0
margin_bottom = 572.0
custom_fonts/font = SubResource( 7 )
custom_styles/normal = SubResource( 10 )
text = "Animation"
align = 1
valign = 1

[node name="Name Text" type="Label" parent="Hud/Animations/Animation"]
margin_left = 269.0
margin_top = 574.0
margin_right = 315.0
margin_bottom = 592.0
custom_fonts/font = SubResource( 7 )
text = "Name:"
valign = 1

[node name="Name" type="TextEdit" parent="Hud/Animations/Animation"]
margin_left = 315.0
margin_top = 574.0
margin_right = 409.0
margin_bottom = 592.0
custom_fonts/font = SubResource( 5 )
text = "Idle0"
readonly = true
script = ExtResource( 13 )

[node name="New" type="Button" parent="Hud/Animations/Animation"]
margin_left = 269.0
margin_top = 595.0
margin_right = 307.0
margin_bottom = 613.0
custom_fonts/font = SubResource( 12 )
disabled = true
text = "New"

[node name="Remove" type="Button" parent="Hud/Animations/Animation"]
margin_left = 311.0
margin_top = 595.0
margin_right = 372.0
margin_bottom = 613.0
custom_fonts/font = SubResource( 12 )
disabled = true
text = "Remove"

[node name="End" type="TextEdit" parent="Hud/Animations/Animation"]
margin_left = 93.0
margin_top = 638.0
margin_right = 345.0
margin_bottom = 656.0
custom_fonts/font = SubResource( 5 )
text = "ASCR_BACK, 1"
readonly = true
script = ExtResource( 13 )

[node name="Button" type="Button" parent="Hud/Animations/Animation"]
margin_left = 347.0
margin_top = 638.0
margin_right = 408.0
margin_bottom = 656.0
custom_fonts/font = SubResource( 12 )
text = "Apply"

[node name="Animation Player" type="Node" parent="Hud/Animations"]

[node name="Animation Player" type="Label" parent="Hud/Animations/Animation Player"]
margin_left = 267.0
margin_top = 659.0
margin_right = 411.0
margin_bottom = 673.0
custom_fonts/font = SubResource( 7 )
custom_styles/normal = SubResource( 10 )
text = "Animation Player"
align = 1
valign = 1

[node name="SpeedText" type="Label" parent="Hud/Animations/Animation Player"]
margin_left = 267.0
margin_top = 674.0
margin_right = 296.0
margin_bottom = 696.0
custom_fonts/font = SubResource( 7 )
text = "FPS:"
valign = 1

[node name="Speed" type="SpinBox" parent="Hud/Animations/Animation Player"]
margin_left = 295.0
margin_top = 674.0
margin_right = 411.0
margin_bottom = 696.0
theme = SubResource( 9 )
max_value = 60.0
value = 24.0
align = 1
editable = false
script = ExtResource( 12 )

[node name="Play" type="Button" parent="Hud/Animations/Animation Player"]
margin_left = 267.0
margin_top = 699.0
margin_right = 305.0
margin_bottom = 717.0
custom_fonts/font = SubResource( 11 )
disabled = true
text = "Play"

[node name="Stop" type="Button" parent="Hud/Animations/Animation Player"]
margin_left = 309.0
margin_top = 699.0
margin_right = 350.0
margin_bottom = 717.0
custom_fonts/font = SubResource( 11 )
disabled = true
text = "Stop"

[node name="Loop" type="Button" parent="Hud/Animations/Animation Player"]
margin_left = 354.0
margin_top = 699.0
margin_right = 395.0
margin_bottom = 717.0
custom_fonts/font = SubResource( 11 )
disabled = true
toggle_mode = true
text = "Loop"

[node name="AnimationList" type="ItemList" parent="Hud/Animations"]
margin_left = 413.0
margin_top = 558.0
margin_right = 552.0
margin_bottom = 718.0
custom_fonts/font = SubResource( 15 )
custom_styles/bg = SubResource( 3 )

[node name="OptionButton" type="OptionButton" parent="Hud/Animations"]
margin_left = 226.0
margin_top = 617.0
margin_right = 409.0
margin_bottom = 635.0
custom_fonts/font = SubResource( 11 )
text = "CharAnim_Idle"
align = 1
icon_align = 1
items = [ "CharAnim_Idle", null, false, 0, null, "CharAnim_Left", null, false, 1, null, "CharAnim_LeftAlt", null, false, 2, null, "CharAnim_Down", null, false, 3, null, "CharAnim_DownAlt", null, false, 4, null, "CharAnim_Up", null, false, 5, null, "CharAnim_UpAlt", null, false, 6, null, "CharAnim_Right", null, false, 7, null, "CharAnim_RightAlt", null, false, 8, null ]
selected = 0

[node name="Frames" type="Node" parent="Hud"]
script = ExtResource( 6 )

[node name="Frames" type="Label" parent="Hud/Frames"]
margin_left = 554.0
margin_top = 542.0
margin_right = 1270.0
margin_bottom = 556.0
custom_fonts/font = SubResource( 7 )
custom_styles/normal = SubResource( 10 )
text = "Frames"
align = 1
valign = 1

[node name="Texture" type="Node" parent="Hud/Frames"]

[node name="Texture" type="Label" parent="Hud/Frames/Texture"]
margin_left = 554.0
margin_top = 558.0
margin_right = 779.0
margin_bottom = 572.0
custom_fonts/font = SubResource( 7 )
custom_styles/normal = SubResource( 10 )
text = "Texture"
align = 1
valign = 1

[node name="Load" type="Button" parent="Hud/Frames/Texture"]
margin_left = 556.0
margin_top = 576.0
margin_right = 598.0
margin_bottom = 598.0
custom_fonts/font = SubResource( 12 )
disabled = true
text = "Load"

[node name="Name" type="TextEdit" parent="Hud/Frames/Texture"]
margin_left = 602.0
margin_top = 576.0
margin_right = 777.0
margin_bottom = 598.0
custom_fonts/font = SubResource( 5 )
text = "idle0"
readonly = true
script = ExtResource( 13 )

[node name="Offsets" type="Node" parent="Hud/Frames"]

[node name="Offsets" type="Label" parent="Hud/Frames/Offsets"]
margin_left = 554.0
margin_top = 602.0
margin_right = 779.0
margin_bottom = 616.0
custom_fonts/font = SubResource( 7 )
custom_styles/normal = SubResource( 10 )
text = "Offsets"
align = 1
valign = 1

[node name="X" type="SpinBox" parent="Hud/Frames/Offsets"]
margin_left = 604.0
margin_top = 618.0
margin_right = 666.0
margin_bottom = 640.0
theme = SubResource( 14 )
max_value = 256.0
script = ExtResource( 12 )

[node name="XLabel" type="Label" parent="Hud/Frames/Offsets"]
margin_left = 556.0
margin_top = 618.0
margin_right = 604.0
margin_bottom = 640.0
custom_fonts/font = SubResource( 6 )
text = "X:"
valign = 1

[node name="Y" type="SpinBox" parent="Hud/Frames/Offsets"]
margin_left = 604.0
margin_top = 642.0
margin_right = 666.0
margin_bottom = 664.0
theme = SubResource( 14 )
max_value = 256.0
script = ExtResource( 12 )

[node name="YLabel" type="Label" parent="Hud/Frames/Offsets"]
margin_left = 556.0
margin_top = 642.0
margin_right = 604.0
margin_bottom = 664.0
custom_fonts/font = SubResource( 6 )
text = "Y:"
valign = 1

[node name="W" type="SpinBox" parent="Hud/Frames/Offsets"]
margin_left = 715.0
margin_top = 618.0
margin_right = 777.0
margin_bottom = 640.0
theme = SubResource( 14 )
max_value = 256.0
script = ExtResource( 12 )

[node name="Width" type="Label" parent="Hud/Frames/Offsets"]
margin_left = 667.0
margin_top = 618.0
margin_right = 715.0
margin_bottom = 640.0
custom_fonts/font = SubResource( 6 )
text = "Width:"
valign = 1

[node name="H" type="SpinBox" parent="Hud/Frames/Offsets"]
margin_left = 715.0
margin_top = 642.0
margin_right = 777.0
margin_bottom = 664.0
theme = SubResource( 14 )
max_value = 256.0
script = ExtResource( 12 )

[node name="Height" type="Label" parent="Hud/Frames/Offsets"]
margin_left = 667.0
margin_top = 642.0
margin_right = 715.0
margin_bottom = 664.0
custom_fonts/font = SubResource( 6 )
text = "Height:"
valign = 1

[node name="Positions" type="Node" parent="Hud/Frames"]

[node name="Positions" type="Label" parent="Hud/Frames/Positions"]
margin_left = 554.0
margin_top = 666.0
margin_right = 779.0
margin_bottom = 680.0
custom_fonts/font = SubResource( 7 )
custom_styles/normal = SubResource( 10 )
text = "Positions"
align = 1
valign = 1

[node name="X" type="SpinBox" parent="Hud/Frames/Positions"]
margin_left = 604.0
margin_top = 682.0
margin_right = 666.0
margin_bottom = 704.0
theme = SubResource( 14 )
min_value = -1000.0
max_value = 1000.0

[node name="XLabel" type="Label" parent="Hud/Frames/Positions"]
margin_left = 556.0
margin_top = 682.0
margin_right = 604.0
margin_bottom = 704.0
custom_fonts/font = SubResource( 6 )
text = "X:"
valign = 1

[node name="Y" type="SpinBox" parent="Hud/Frames/Positions"]
margin_left = 715.0
margin_top = 682.0
margin_right = 777.0
margin_bottom = 704.0
theme = SubResource( 14 )
min_value = -1000.0
max_value = 1000.0

[node name="YLabel" type="Label" parent="Hud/Frames/Positions"]
margin_left = 667.0
margin_top = 682.0
margin_right = 715.0
margin_bottom = 704.0
custom_fonts/font = SubResource( 6 )
text = "Y:"
valign = 1

[node name="FramesList" type="ItemList" parent="Hud/Frames"]
margin_left = 909.0
margin_top = 558.0
margin_right = 1270.0
margin_bottom = 718.0
custom_colors/font_color_selected = Color( 0.917647, 1, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 15 )
custom_styles/bg = SubResource( 3 )
items = [ "", null, false ]

[node name="Add" type="Button" parent="Hud/Frames"]
margin_left = 783.0
margin_top = 560.0
margin_right = 907.0
margin_bottom = 578.0
custom_fonts/font = SubResource( 11 )
disabled = true
text = "Add"

[node name="Remove" type="Button" parent="Hud/Frames"]
margin_left = 846.0
margin_top = 582.0
margin_right = 907.0
margin_bottom = 600.0
custom_fonts/font = SubResource( 11 )
disabled = true
text = "Remove"

[node name="Replace" type="Button" parent="Hud/Frames"]
margin_left = 783.0
margin_top = 582.0
margin_right = 842.0
margin_bottom = 600.0
custom_fonts/font = SubResource( 11 )
disabled = true
text = "Replace"

[node name="Up" type="Button" parent="Hud/Frames"]
margin_left = 783.0
margin_top = 626.0
margin_right = 842.0
margin_bottom = 644.0
custom_fonts/font = SubResource( 11 )
disabled = true
text = "Up"

[node name="Down" type="Button" parent="Hud/Frames"]
margin_left = 846.0
margin_top = 626.0
margin_right = 907.0
margin_bottom = 644.0
custom_fonts/font = SubResource( 11 )
disabled = true
text = "Down"

[node name="Undo" type="Button" parent="Hud/Frames"]
margin_left = 783.0
margin_top = 604.0
margin_right = 842.0
margin_bottom = 622.0
custom_fonts/font = SubResource( 11 )
disabled = true
text = "Undo"

[node name="Redo" type="Button" parent="Hud/Frames"]
margin_left = 846.0
margin_top = 604.0
margin_right = 907.0
margin_bottom = 622.0
custom_fonts/font = SubResource( 11 )
disabled = true
text = "Redo"

[node name="Help" type="Label" parent="Hud"]
margin_left = 966.0
margin_top = 17.0
margin_right = 1263.0
margin_bottom = 175.0
rect_pivot_offset = Vector2( 252, 0 )
custom_fonts/font = SubResource( 13 )
text = "[Offsets]
Movements: Arrow Keys
(Hold Shift to speed up x10)

[Camera]
Movements: W/A/S/D
Zooms: Q/E"
align = 2

[node name="Info" type="Label" parent="Hud"]
margin_left = 17.0
margin_top = 18.0
margin_right = 201.0
margin_bottom = 136.0
custom_fonts/font = SubResource( 13 )
text = "Scale: 100%"

[node name="New" type="FileDialog" parent="Hud"]
margin_left = 8.0
margin_top = 30.0
margin_right = 1270.0
margin_bottom = 710.0
rect_min_size = Vector2( 190, 66.5 )
window_title = "Open a Directory"
mode = 2
access = 2

[node name="Load" type="FileDialog" parent="Hud"]
margin_left = 8.0
margin_top = 30.0
margin_right = 1270.0
margin_bottom = 710.0
rect_min_size = Vector2( 190, 66.5 )
window_title = "Open a Directory"
mode = 2
access = 2

[node name="ErrorText" type="Label" parent="Hud"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 344.0
margin_right = 1280.0
margin_bottom = 377.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Error Text"
align = 1
valign = 1

[node name="Properties" type="WindowDialog" parent="Hud"]
visible = true
margin_left = 380.0
margin_top = 180.0
margin_right = 900.0
margin_bottom = 540.0
script = ExtResource( 15 )
__meta__ = {
"_edit_lock_": true
}

[node name="IconsBG" type="ColorRect" parent="Hud/Properties"]
margin_left = 258.0
margin_top = 6.0
margin_right = 514.0
margin_bottom = 262.0

[node name="Icons" type="Sprite" parent="Hud/Properties"]
position = Vector2( 258, 6 )
texture = ExtResource( 14 )
centered = false

[node name="Normal" type="ColorRect" parent="Hud/Properties/Icons"]
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0.0313726, 1, 0, 0.501961 )

[node name="Losing" type="ColorRect" parent="Hud/Properties/Icons"]
margin_right = 40.0
margin_bottom = 40.0
color = Color( 1, 0, 0, 0.501961 )

[node name="Name Text" type="Label" parent="Hud/Properties"]
margin_left = 6.0
margin_top = 8.0
margin_right = 47.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 7 )
text = "Name:"
valign = 1

[node name="HB Color Text" type="Label" parent="Hud/Properties"]
margin_left = 6.0
margin_top = 52.0
margin_right = 65.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 7 )
text = "Health Bar Color:"
valign = 1

[node name="Name" type="TextEdit" parent="Hud/Properties"]
margin_left = 47.0
margin_top = 8.0
margin_right = 139.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 5 )
text = "CharName"
readonly = true

[node name="HB Color" type="TextEdit" parent="Hud/Properties"]
margin_left = 115.0
margin_top = 52.0
margin_right = 178.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 5 )
text = "808080"
readonly = true

[node name="Size Text" type="Label" parent="Hud/Properties"]
margin_left = 6.0
margin_top = 27.0
margin_right = 41.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 7 )
text = "Size:"
valign = 1

[node name="Size" type="SpinBox" parent="Hud/Properties"]
margin_left = 41.0
margin_top = 27.0
margin_right = 103.0
margin_bottom = 49.0
theme = SubResource( 9 )
min_value = 0.1
max_value = 10.0
step = 0.1
value = 2.0
align = 1
editable = false

[node name="Focus X Text" type="Label" parent="Hud/Properties"]
margin_left = 6.0
margin_top = 73.0
margin_right = 41.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 7 )
text = "Focus X:"
valign = 1

[node name="Focus X" type="SpinBox" parent="Hud/Properties"]
margin_left = 64.0
margin_top = 73.0
margin_right = 126.0
margin_bottom = 95.0
theme = SubResource( 9 )
min_value = -512.0
max_value = 512.0
align = 1
editable = false

[node name="Focus Y Text" type="Label" parent="Hud/Properties"]
margin_left = 6.0
margin_top = 98.0
margin_right = 60.0
margin_bottom = 120.0
rect_pivot_offset = Vector2( 65, 13 )
custom_fonts/font = SubResource( 7 )
text = "Focus Y:"
valign = 1

[node name="Focus Y" type="SpinBox" parent="Hud/Properties"]
margin_left = 64.0
margin_top = 98.0
margin_right = 126.0
margin_bottom = 120.0
rect_pivot_offset = Vector2( 7, 13 )
theme = SubResource( 9 )
min_value = -512.0
max_value = 512.0
align = 1
editable = false

[node name="Focus Zoom Text" type="Label" parent="Hud/Properties"]
margin_left = 6.0
margin_top = 123.0
margin_right = 60.0
margin_bottom = 145.0
rect_pivot_offset = Vector2( 65, 13 )
custom_fonts/font = SubResource( 7 )
text = "Focus Zoom:"
valign = 1

[node name="Focus Zoom" type="SpinBox" parent="Hud/Properties"]
margin_left = 91.0
margin_top = 123.0
margin_right = 153.0
margin_bottom = 145.0
rect_pivot_offset = Vector2( 7, 13 )
theme = SubResource( 9 )
min_value = 0.1
max_value = 10.0
step = 0.1
value = 1.0
align = 1
editable = false

[node name="Player" type="CheckButton" parent="Hud/Properties"]
margin_left = 3.0
margin_top = 317.0
margin_right = 123.0
margin_bottom = 357.0
custom_fonts/font = SubResource( 5 )
text = "Player"
align = 1
icon_align = 1

[node name="Normal Icon" type="Label" parent="Hud/Properties"]
margin_left = 262.0
margin_top = 270.0
margin_right = 512.0
margin_bottom = 284.0
custom_fonts/font = SubResource( 7 )
custom_styles/normal = SubResource( 10 )
text = "Normal Icon "
align = 1
valign = 1

[node name="X1" type="SpinBox" parent="Hud/Properties"]
margin_left = 263.0
margin_top = 286.0
margin_right = 325.0
margin_bottom = 308.0
theme = SubResource( 9 )
max_value = 256.0
editable = false

[node name="Y1" type="SpinBox" parent="Hud/Properties"]
margin_left = 325.0
margin_top = 286.0
margin_right = 387.0
margin_bottom = 308.0
theme = SubResource( 9 )
max_value = 256.0
editable = false

[node name="W1" type="SpinBox" parent="Hud/Properties"]
margin_left = 387.0
margin_top = 286.0
margin_right = 449.0
margin_bottom = 308.0
theme = SubResource( 9 )
min_value = 1.0
max_value = 256.0
value = 41.0
editable = false

[node name="H1" type="SpinBox" parent="Hud/Properties"]
margin_left = 449.0
margin_top = 286.0
margin_right = 511.0
margin_bottom = 308.0
theme = SubResource( 9 )
min_value = 1.0
max_value = 256.0
value = 25.0
editable = false

[node name="Losing Icon" type="Label" parent="Hud/Properties"]
margin_left = 262.0
margin_top = 310.0
margin_right = 512.0
margin_bottom = 324.0
custom_fonts/font = SubResource( 7 )
custom_styles/normal = SubResource( 10 )
text = "Losing Icon "
align = 1
valign = 1

[node name="X2" type="SpinBox" parent="Hud/Properties"]
margin_left = 263.0
margin_top = 326.0
margin_right = 325.0
margin_bottom = 348.0
theme = SubResource( 9 )
max_value = 256.0
value = 42.0
editable = false

[node name="Y2" type="SpinBox" parent="Hud/Properties"]
margin_left = 325.0
margin_top = 326.0
margin_right = 387.0
margin_bottom = 348.0
theme = SubResource( 9 )
max_value = 256.0
editable = false

[node name="W2" type="SpinBox" parent="Hud/Properties"]
margin_left = 387.0
margin_top = 326.0
margin_right = 449.0
margin_bottom = 348.0
theme = SubResource( 9 )
min_value = 1.0
max_value = 256.0
value = 41.0
editable = false

[node name="H2" type="SpinBox" parent="Hud/Properties"]
margin_left = 449.0
margin_top = 326.0
margin_right = 511.0
margin_bottom = 348.0
theme = SubResource( 9 )
min_value = 1.0
max_value = 256.0
value = 27.0
editable = false

[connection signal="pressed" from="Hud/File/New" to="Hud/File" method="_on_New_Data_pressed"]
[connection signal="pressed" from="Hud/File/Load" to="Hud/File" method="_on_Load_Data_pressed"]
[connection signal="pressed" from="Hud/File/Save" to="Hud/File" method="_on_Save_pressed"]
[connection signal="pressed" from="Hud/File/Export" to="Hud/File" method="_on_Export_C_pressed"]
[connection signal="pressed" from="Hud/File/Export" to="Hud/File/Export" method="_on_Export_pressed"]
[connection signal="pressed" from="Hud/Character/Properties" to="Hud/Properties" method="_on_Properties_pressed"]
[connection signal="pressed" from="Hud/Animations/Animation/New" to="Hud/Animations" method="_on_New_pressed"]
[connection signal="pressed" from="Hud/Animations/Animation/Remove" to="Hud/Animations" method="_on_Remove_pressed"]
[connection signal="text_changed" from="Hud/Animations/Animation/End" to="Hud/Animations" method="_on_End_text_changed"]
[connection signal="pressed" from="Hud/Animations/Animation/Button" to="Hud/Animations" method="_on_Button_pressed"]
[connection signal="changed" from="Hud/Animations/Animation Player/Speed" to="Hud/Animations" method="_on_Speed_changed"]
[connection signal="value_changed" from="Hud/Animations/Animation Player/Speed" to="Hud/Animations" method="_on_Speed_value_changed"]
[connection signal="pressed" from="Hud/Animations/Animation Player/Play" to="Hud/Animations" method="_on_Play_pressed"]
[connection signal="toggled" from="Hud/Animations/Animation Player/Loop" to="Hud/Animations" method="_on_Loop_toggled"]
[connection signal="item_selected" from="Hud/Animations/AnimationList" to="Hud/Animations" method="_on_AnimationList_item_selected"]
[connection signal="item_selected" from="Hud/Animations/OptionButton" to="Hud/Animations" method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="Hud/Frames/Texture/Load" to="Hud/Frames" method="_on_Load_Texture_pressed"]
[connection signal="item_selected" from="Hud/Frames/FramesList" to="Hud/Frames" method="_on_FramesList_item_selected"]
[connection signal="pressed" from="Hud/Frames/Add" to="Hud/Frames" method="_on_Add_pressed"]
[connection signal="pressed" from="Hud/Frames/Remove" to="Hud/Frames" method="_on_Remove_pressed"]
[connection signal="pressed" from="Hud/Frames/Replace" to="Hud/Frames" method="_on_Replace_pressed"]
[connection signal="dir_selected" from="Hud/New" to="Hud/File" method="_on_New_dir_selected"]
[connection signal="dir_selected" from="Hud/Load" to="Hud/File" method="_on_Load_dir_selected"]
[connection signal="toggled" from="Hud/Properties/Player" to="Hud/Character" method="_on_Player_toggled"]
